# usb-tools

./: .gitignore  .travis.yml  Makefile  README  README.md  acmc.c  acmd.c  autogen.sh  cleware.c  companion-desc.c  configure.ac  control.c  device-reset.c  msc.c  msc.sh  pingtest  scptest.sh  serialc.c  seriald.c  switchbox.c  test.sh  testmode.c  testusb.c  uda-client.c  uda.c  usbpwrtest
scripts/: create_std_source.sh
src/: Makefile.am  acmc.c  acmd.c  cleware.c  companion-desc.c  control.c  device-reset.c  msc.c  msc.sh  pingtest  scptest.sh  serialc.c  seriald.c  switchbox.c  test.sh  testmode.c  testusb.c  trace.c  uda-client.c  uda.c  usbpwrtest
